save level to check repository works

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -120,10 +120,10 @@ bUseUnsortedMenus=False
 MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Animation,MaterialEditorInstanceConstant.ParameterGroups.CloudColors,MaterialEditorInstanceConstant.ParameterGroups.Global,MaterialEditorInstanceConstant.ParameterGroups.Sky,MaterialEditorInstanceConstant.ParameterGroups.Sun,MaterialEditorInstanceConstant.ParameterGroups.Scalar Parameter Values,
 
 [EditorStartup]
-LastLevel=/Game/Maps/Zen_P
+LastLevel=/Game/zenvironment/zenvironment
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
 
 [DetailCategories]
 EditorStyleSettings.UserInterface=True
