finished putting all the rocks in place

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -123,7 +123,7 @@ MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.An
 LastLevel=/Game/zenvironment/zenvironment
 
 [AssetEditorManager]
-CleanShutdown=False
+CleanShutdown=True
 
 [DetailCategories]
 EditorStyleSettings.UserInterface=True
@@ -709,7 +709,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=../../../../../../Users/sharo/Desktop/level design shenanigans/environment/Content/zenvironment
+UNR=../../../../../../Users/sharo/Desktop/level design shenanigans/zenvironment/Content/zenvironment
 BRUSH=../../../../../../Users/sharo/Desktop/level design shenanigans/environment/Content/
 FBX=../../../../../../Users/sharo/Desktop/level design shenanigans/environment/Content/
 FBXAnim=../../../../../../Users/sharo/Desktop/level design shenanigans/environment/Content/
